// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Race renders an image at position 0 1`] = `
<div>
  <img
    alt="Octane"
    src="octane.png"
    style={
      Object {
        "paddingLeft": "0%",
      }
    }
  />
</div>
`;

exports[`Race renders an image at position 1 1`] = `
<div>
  <img
    alt="Octane"
    src="octane.png"
    style={
      Object {
        "paddingLeft": "7.5%",
      }
    }
  />
</div>
`;
